Fix frontend-backend connection and implement missing services
- Created Service implementations: LocationServiceImpl, VehicleServiceImpl, ScheduleServiceImpl
- Fixed DTO constructor mismatches and method signatures
- Resolved frontend localStorage SSR issues in authSlice.js
- Fixed flightId parameter defaults in flightSlice.js
- Switched backend to H2 in-memory database for testing
- Created comprehensive test script and final report
- Cleaned up temporary files

Backend: ✅ Running on port 8080
Frontend: ✅ Running on port 3000
Connection: ✅ Fully functional between frontend-backend